# chic

./: .gitignore  README.md  generate-react-cli.json  note  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
app/: api.ts  globals.css  layout.tsx  page.tsx  store.ts  template.tsx  types.ts
app/api/: route.ts
app/artists/: page.tsx
app/components/: media-player.tsx  nav-items.tsx  playlist-items.tsx  sidebar.tsx
app/playlists/: page.tsx
app/server/: db.ts
app/services/: playlist.ts
frontend/src/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: nav-item.tsx
frontend/src/app/ui/: sidebar.tsx
prisma/: schema.prisma
public/: index.html  manifest.json
src/: App.tsx  api.ts  index.css  spacing.ts  store.ts  types.d.ts
src-tauri/: Cargo.toml  chic  chic.db-shm  chic.db-wal  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/chic_DB/: db  snap.00000000000000A1
src-tauri/local-file-service/: Cargo.toml
src-tauri/migrations/2022-02-23-164000_chic_data/: up.sql
src-tauri/src/: .env  authentication_manager.rs  discogs.rs  file_manager.rs  helper.rs  lib.rs  main.rs  mod.rs  music_player.rs  youtube.rs
src.bak/: colors.ts  store.ts  tsconfig.json.bak  types.d.ts
src.bak/components/Albums/: Albums.tsx
src.bak/components/Body/: Body.tsx
src.bak/components/Card/: Card.tsx
src.bak/components/Content/: Content.tsx
src.bak/components/Draggable/: Draggable.tsx
src.bak/components/MadeForYou/: MadeForYou.tsx
src.bak/components/MountTransition/: MountTransition.tsx
src.bak/components/Music2Try/: Music2Try.tsx
src.bak/components/PlayList/: PlayList.tsx
src.bak/components/Player/: Player.tsx
src.bak/components/RouteTransition/: RouteTransition.tsx
src.bak/components/SideBar/: SideBar.tsx
src.bak/components/Songs/: Songs.tsx
src/app/: layout.tsx  page.tsx  store.ts
src/components/: media-player.tsx  playlist.tsx  sidebar.tsx
src/components/Albums/: Albums.test.tsx
src/components/Artists/: Artists.test.tsx  Artists.tsx
src/components/Button/: Button.tsx
src/components/Card/: Card.test.tsx  Card.tsx
src/components/CreatePlaylist/: CreatePlaylist.test.tsx  CreatePlaylist.tsx
src/components/Droppable/: Droppable.tsx
src/components/Home/: Home.tsx
src/components/MadeForYou/: MadeForYou.test.tsx
src/components/MountTransition/: MountTransition.test.tsx  MountTransition.tsx
src/components/Music2Try/: Music2Try.test.tsx
src/components/NavBar/: NavBar.tsx
src/components/PlayList/: PlayList.test.tsx
src/components/Player/: Player.tsx  player_webworker.ts
src/components/RouteTransition/: RouteTransition.test.tsx  RouteTransition.tsx
src/components/Settings/: Settings.tsx
src/components/SideBar/: SideBar.tsx
src/components/Songs/: Songs.test.tsx  Songs.tsx
